--- a/TEMPLATE/Views/Partials/_SidebarHead.cshtml
+++ b/TEMPLATE/Views/Partials/_SidebarHead.cshtml
@@ -24,18 +24,6 @@
 <nav class="navbar navbar-header navbar-expand-lg" data-background-color="blue2">
 	
 	<div class="container-fluid">
-		@*<div class="collapse" id="search-nav">
-			<form class="navbar-left navbar-form nav-search mr-md-3">
-				<div class="input-group">
-					<div class="input-group-prepend">
-						<button type="submit" class="btn btn-search pr-1">
-							<i class="fa fa-search search-icon"></i>
-						</button>
-					</div>
-					<input type="text" placeholder="Search ..." class="form-control">
-				</div>
-			</form>
-		</div>*@
 		<ul class="navbar-nav topbar-nav ml-md-auto align-items-center">
 			<li class="nav-item toggle-nav-search hidden-caret">
 				<a class="nav-link" data-toggle="collapse" href="#search-nav" role="button" aria-expanded="false" aria-controls="search-nav">
@@ -59,7 +47,7 @@
 							<div class="notif-center">
 								<a href="#">
 									<div class="notif-img"> 
-										@*<img src="<?= base_url()?>assets/img/jm_denis.jpg" alt="Img Profile">*@
+										
 									</div>
 									<div class="notif-content">
 										<span class="subject">Jimmy Denis</span>
@@ -71,7 +59,7 @@
 								</a>
 								<a href="#">
 									<div class="notif-img"> 
-										@*<img src="<?= base_url()?>assets/img/chadengle.jpg" alt="Img Profile">*@
+										
 									</div>
 									<div class="notif-content">
 										<span class="subject">Chad</span>
@@ -83,7 +71,7 @@
 								</a>
 								<a href="#">
 									<div class="notif-img"> 
-										@*<img src="<?= base_url()?>assets/img/mlane.jpg" alt="Img Profile">*@
+										
 									</div>
 									<div class="notif-content">
 										<span class="subject">Jhon Doe</span>
@@ -95,7 +83,7 @@
 								</a>
 								<a href="#">
 									<div class="notif-img"> 
-										@*<img src="<?= base_url()?>assets/img/talha.jpg" alt="Img Profile">*@
+										
 									</div>
 									<div class="notif-content">
 										<span class="subject">Talha</span>
@@ -145,7 +133,7 @@
 								</a>
 								<a href="#">
 									<div class="notif-img"> 
-										@*<img src="<?= base_url()?>assets/img/profile2.jpg" alt="Img Profile">*@
+                                       
 									</div>
 									<div class="notif-content">
 										<span class="block">
@@ -244,14 +232,14 @@
 			<li class="nav-item dropdown hidden-caret">
 				<a class="dropdown-toggle profile-pic" data-toggle="dropdown" href="#" aria-expanded="false">
 					<div class="avatar-sm">
-						@*<img src="<?= base_url()?>assets/img/profile.jpg" alt="..." class="avatar-img rounded-circle">*@
+						
 					</div>
 				</a>
 				<ul class="dropdown-menu dropdown-user animated fadeIn">
 					<div class="dropdown-user-scroll scrollbar-outer">
 						<li>
 							<div class="user-box">
-								<div class="avatar-lg">@*<img src="<?= base_url()?>assets/img/profile.jpg" alt="image profile" class="avatar-img rounded">*@</div>
+								<div class="avatar-lg"></div>
 								<div class="u-text">
 									<h4>Hizrian</h4>
 									<p class="text-muted">hello@example.com</p><a href="profile.html" class="btn btn-xs btn-secondary btn-sm">View Profile</a>
