Ajout sidebar menu des employes

--- a/TEMPLATE/Views/Partials/_SidebarMenuStation.cshtml
+++ b/TEMPLATE/Views/Partials/_SidebarMenuStation.cshtml
@@ -12,14 +12,7 @@
 				
 				<div class="profile-usertitle-status"><span class="indicator label-success"></span><i class="fa fa-circle"style="color:green"></i>&emsp;En ligne</div>
            </div>
-            
-			@*<?php 
-			   $memb=$this->Model->readOne('membre', ['ID_MEMBRE'=> $this->session->userdata('memberid')]);
-
-				?>*@
-			<div class="avatar-sm float-left mr-2">
-				@*<img src="<?= base_url('assets/photo/Profile/').$memb['IMAGE'];?>" alt="..." class="avatar-img rounded-circle">*@
-			</div>
+			<div class="avatar-sm float-left mr-2"></div>
 			
 		</div>
         @{
@@ -107,3 +100,24 @@
 	</div>
 </div>
 </div>
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
