creation d'une vue qui afficher les clients pour les employes des station de lavage

--- a/TEMPLATE/Views/ClientStation/Index.cshtml
+++ b/TEMPLATE/Views/ClientStation/Index.cshtml
@@ -5,7 +5,6 @@
 }
 <div class="main-panel">
  <div class="container">
-
     <div class="panel-header bg-primary-gradient">
        <div class="page-inner py-3">
           <div class="d-flex align-items-left align-items-md-center flex-column flex-md-row">
@@ -34,10 +33,7 @@
 </div>
 </div>
 </div>
-
-<!-- YOUR CODE HERE
- -->            <div class="card-body rec-pat" >
-             
+<div class="card-body rec-pat" >      
  <div class="container-fluid">
       @if (Session["IDEmploye"] != null)
       { 
@@ -151,3 +147,28 @@
     <script src="~/Scripts/tableau1.js"></script>
        <script src="~/Scripts/tableau.js"></script>
 }
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
