--- a/TEMPLATE/Views/ClientStation/Details.cshtml
+++ b/TEMPLATE/Views/ClientStation/Details.cshtml
@@ -4,8 +4,7 @@
     ViewBag.Title = "Details";
 }
 
-<h2>Details</h2>
-
+<h2>Details</h2
 <fieldset>
     <legend>client</legend>
 
@@ -69,3 +68,15 @@
     @Html.ActionLink("Edit", "Edit", new { /* id=Model.PrimaryKey */ }) |
     @Html.ActionLink("Back to List", "Index")
 </p>
+
+
+
+
+
+
+
+
+
+
+
+
