creation d'une vue pour la modification

--- a/TEMPLATE/Views/Association/Edit.cshtml
+++ b/TEMPLATE/Views/Association/Edit.cshtml
@@ -1,4 +1,5 @@
-﻿@model TEMPLATE.Models.association
+﻿
+@model TEMPLATE.Models.association
 @{
     ViewBag.Title = "Index";
     Layout = "~/Views/Layouts/_Default.cshtml";
