creation  d'une vue pour afficher tous les zone qui existe

--- a/TEMPLATE/Views/Zone/Index.cshtml
+++ b/TEMPLATE/Views/Zone/Index.cshtml
@@ -1,4 +1,6 @@
-﻿@model IEnumerable<TEMPLATE.Models.zone>
+﻿
+
+@model IEnumerable<TEMPLATE.Models.zone>
 @{
     ViewBag.Title = "Index";
     Layout = "~/Views/Layouts/_Default.cshtml";
