--- a/TEMPLATE/Views/Zone/Create.cshtml
+++ b/TEMPLATE/Views/Zone/Create.cshtml
@@ -1,4 +1,6 @@
-﻿@model TEMPLATE.Models.zone
+﻿
+
+@model TEMPLATE.Models.zone
 @{
     ViewBag.Title = "Index";
     Layout = "~/Views/Layouts/_Default.cshtml";
