creation  d'une vue pour la suppression d'une zone

--- a/TEMPLATE/Views/Zone/Delete.cshtml
+++ b/TEMPLATE/Views/Zone/Delete.cshtml
@@ -1,4 +1,5 @@
-﻿@model TEMPLATE.Models.zone
+﻿
+@model TEMPLATE.Models.zone
 @{
     ViewBag.Title = "Index";
     Layout = "~/Views/Layouts/_Default.cshtml";
