--- a/TEMPLATE/Views/Commune/Index.cshtml
+++ b/TEMPLATE/Views/Commune/Index.cshtml
@@ -1,4 +1,6 @@
-﻿@model IEnumerable<TEMPLATE.Models.commune>
+﻿
+
+@model IEnumerable<TEMPLATE.Models.commune>
 @{
     ViewBag.Title = "Index";
     Layout = "~/Views/Layouts/_Default.cshtml";
