craeation d'un vue pour la modification d'une commune

--- a/TEMPLATE/Views/Commune/Edit.cshtml
+++ b/TEMPLATE/Views/Commune/Edit.cshtml
@@ -1,4 +1,5 @@
-﻿@model TEMPLATE.Models.commune
+﻿
+@model TEMPLATE.Models.commune
 @{
     ViewBag.Title = "Index";
     Layout = "~/Views/Layouts/_Default.cshtml";
