--- a/TEMPLATE/Views/Commune/Delete.cshtml
+++ b/TEMPLATE/Views/Commune/Delete.cshtml
@@ -1,4 +1,5 @@
-﻿@model TEMPLATE.Models.commune
+﻿
+@model TEMPLATE.Models.commune
 @{
     ViewBag.Title = "Index";
     Layout = "~/Views/Layouts/_Default.cshtml";
