--- a/TEMPLATE/Views/EmployeAssociation/Index.cshtml
+++ b/TEMPLATE/Views/EmployeAssociation/Index.cshtml
@@ -1,4 +1,5 @@
-﻿@model IEnumerable<TEMPLATE.Models.employe_association>
+﻿
+@model IEnumerable<TEMPLATE.Models.employe_association>
 @{
     ViewBag.Title = "Index";
     Layout = "~/Views/Layouts/_Default.cshtml";
