creation d'une vue index pour affichage

--- a/TEMPLATE/Views/EmployeStation/Index.cshtml
+++ b/TEMPLATE/Views/EmployeStation/Index.cshtml
@@ -1,4 +1,6 @@
-﻿@model IEnumerable<TEMPLATE.Models.employe_station_lavage>
+﻿
+
+@model IEnumerable<TEMPLATE.Models.employe_station_lavage>
 @{
     ViewBag.Title = "Index";
     Layout = "~/Views/Layouts/_Default.cshtml";
