--- a/TEMPLATE/Views/EmployeStation/Edit.cshtml
+++ b/TEMPLATE/Views/EmployeStation/Edit.cshtml
@@ -1,4 +1,6 @@
-﻿@model TEMPLATE.Models.employe_station_lavage
+﻿
+
+@model TEMPLATE.Models.employe_station_lavage
 @{
     ViewBag.Title = "Index";
     Layout = "~/Views/Layouts/_Default.cshtml";
