--- a/TEMPLATE/Views/EmployeStation/Details.cshtml
+++ b/TEMPLATE/Views/EmployeStation/Details.cshtml
@@ -1,4 +1,5 @@
-﻿@model TEMPLATE.Models.employe_station_lavage
+﻿
+@model TEMPLATE.Models.employe_station_lavage
 
 @{
     ViewBag.Title = "Details";
