creation d'une vue pour detaille l'historique

--- a/TEMPLATE/Views/HistoriqueAssoction/Details.cshtml
+++ b/TEMPLATE/Views/HistoriqueAssoction/Details.cshtml
@@ -1,4 +1,5 @@
-﻿@model TEMPLATE.Models.historique_asscociation
+﻿
+@model TEMPLATE.Models.historique_asscociation
 
 @{
     ViewBag.Title = "Details";
