creation d'une vue pour edite

--- a/TEMPLATE/Views/HistoriqueAssoction/Edit.cshtml
+++ b/TEMPLATE/Views/HistoriqueAssoction/Edit.cshtml
@@ -1,4 +1,7 @@
-﻿@model TEMPLATE.Models.historique_asscociation
+﻿
+
+
+@model TEMPLATE.Models.historique_asscociation
  @{
     ViewBag.Title = "Index";
     Layout = "~/Views/Layouts/_Default.cshtml";
