--- a/TEMPLATE/Views/HistoriqueAssoction/Delete.cshtml
+++ b/TEMPLATE/Views/HistoriqueAssoction/Delete.cshtml
@@ -1,4 +1,6 @@
-﻿@model TEMPLATE.Models.historique_asscociation
+﻿
+
+@model TEMPLATE.Models.historique_asscociation
  @{
     ViewBag.Title = "Index";
     Layout = "~/Views/Layouts/_Default.cshtml";
