--- a/TEMPLATE/Views/HistoriquePrix/Delete.cshtml
+++ b/TEMPLATE/Views/HistoriquePrix/Delete.cshtml
@@ -1,4 +1,5 @@
-﻿@model TEMPLATE.Models.historique_prix
+﻿
+@model TEMPLATE.Models.historique_prix
 @{
     ViewBag.Title = "Index";
     Layout = "~/Views/Layouts/_Default.cshtml";
