creation d'une vue index pour affichage

--- a/TEMPLATE/Views/HistoriquePrixStation/Index.cshtml
+++ b/TEMPLATE/Views/HistoriquePrixStation/Index.cshtml
@@ -1,4 +1,6 @@
-﻿@model IEnumerable<TEMPLATE.Models.historique_prix>
+﻿
+
+@model IEnumerable<TEMPLATE.Models.historique_prix>
 @{
     ViewBag.Title = "Index";
     Layout = "~/Views/Layouts/_DefaultStation.cshtml";
