--- a/TEMPLATE/Views/HistoriqueUtilisateur/Index.cshtml
+++ b/TEMPLATE/Views/HistoriqueUtilisateur/Index.cshtml
@@ -1,4 +1,5 @@
-﻿@model IEnumerable<TEMPLATE.Models.historique_utilisateur>
+﻿
+@model IEnumerable<TEMPLATE.Models.historique_utilisateur>
 @{
     ViewBag.Title = "Index";
     Layout = "~/Views/Layouts/_Default.cshtml";
