ajout une vue details

--- a/TEMPLATE/Views/HistoriqueUtilisateur/Details.cshtml
+++ b/TEMPLATE/Views/HistoriqueUtilisateur/Details.cshtml
@@ -1,4 +1,5 @@
-﻿@model TEMPLATE.Models.historique_utilisateur
+﻿
+@model TEMPLATE.Models.historique_utilisateur
 
 @{
     ViewBag.Title = "Details";
