creation d'une vue index

--- a/TEMPLATE/Views/Utilisateur/Index.cshtml
+++ b/TEMPLATE/Views/Utilisateur/Index.cshtml
@@ -1,4 +1,6 @@
-﻿@model IEnumerable<TEMPLATE.Models.utilisateur>
+﻿
+
+@model IEnumerable<TEMPLATE.Models.utilisateur>
 @{
     ViewBag.Title = "Index";
     Layout = "~/Views/Layouts/_Default.cshtml";
