--- a/TEMPLATE/Views/Utilisateur/Create.cshtml
+++ b/TEMPLATE/Views/Utilisateur/Create.cshtml
@@ -1,4 +1,6 @@
-﻿@model TEMPLATE.Models.utilisateur
+﻿
+
+@model TEMPLATE.Models.utilisateur
 @{
     ViewBag.Title = "Index";
     Layout = "~/Views/Layouts/_Default.cshtml";
