ajout une vue index

--- a/TEMPLATE/Views/Profiles/Index.cshtml
+++ b/TEMPLATE/Views/Profiles/Index.cshtml
@@ -1,4 +1,6 @@
-﻿@model IEnumerable<TEMPLATE.Models.profile>
+﻿
+
+@model IEnumerable<TEMPLATE.Models.profile>
 @{
     ViewBag.Title = "Index";
     Layout = "~/Views/Layouts/_Default.cshtml";
