ajout une vue edit

--- a/TEMPLATE/Views/Profiles/Edit.cshtml
+++ b/TEMPLATE/Views/Profiles/Edit.cshtml
@@ -1,4 +1,5 @@
-﻿@model TEMPLATE.Models.profile
+﻿
+@model TEMPLATE.Models.profile
 @{
     ViewBag.Title = "Index";
     Layout = "~/Views/Layouts/_Default.cshtml";
