--- a/TEMPLATE/Views/Profiles/Create.cshtml
+++ b/TEMPLATE/Views/Profiles/Create.cshtml
@@ -1,4 +1,6 @@
-﻿@model TEMPLATE.Models.profile
+﻿
+
+@model TEMPLATE.Models.profile
 @{
     ViewBag.Title = "Index";
     Layout = "~/Views/Layouts/_Default.cshtml";
