ajout une vue index

--- a/TEMPLATE/Views/Province/Index.cshtml
+++ b/TEMPLATE/Views/Province/Index.cshtml
@@ -1,4 +1,5 @@
-﻿@model IEnumerable<TEMPLATE.Models.province>
+﻿
+@model IEnumerable<TEMPLATE.Models.province>
 @{
     ViewBag.Title = "Index";
     Layout = "~/Views/Layouts/_Default.cshtml";
