ajout une vue edit

--- a/TEMPLATE/Views/Province/Edit.cshtml
+++ b/TEMPLATE/Views/Province/Edit.cshtml
@@ -1,4 +1,5 @@
-﻿@model TEMPLATE.Models.province
+﻿
+@model TEMPLATE.Models.province
 @{
     ViewBag.Title = "Index";
     Layout = "~/Views/Layouts/_Default.cshtml";
