ajout une  vue index

--- a/TEMPLATE/Views/Qualite/Index.cshtml
+++ b/TEMPLATE/Views/Qualite/Index.cshtml
@@ -1,4 +1,5 @@
-﻿@model IEnumerable<TEMPLATE.Models.qualite>
+﻿
+@model IEnumerable<TEMPLATE.Models.qualite>
 @{
     ViewBag.Title = "Index";
     Layout = "~/Views/Layouts/_Default.cshtml";
