--- a/TEMPLATE/Views/Qualite/Edit.cshtml
+++ b/TEMPLATE/Views/Qualite/Edit.cshtml
@@ -1,4 +1,5 @@
-﻿@model TEMPLATE.Models.qualite
+﻿
+@model TEMPLATE.Models.qualite
 @{
     ViewBag.Title = "Index";
     Layout = "~/Views/Layouts/_Default.cshtml";
