ajout une vue index

--- a/TEMPLATE/Views/QualiteStation/Index.cshtml
+++ b/TEMPLATE/Views/QualiteStation/Index.cshtml
@@ -1,4 +1,6 @@
-﻿@model IEnumerable<TEMPLATE.Models.qualite>
+﻿
+
+@model IEnumerable<TEMPLATE.Models.qualite>
 @{
     ViewBag.Title = "Index";
     Layout = "~/Views/Layouts/_DefaultStation.cshtml";
