creation une index pour voir les recoltes

--- a/TEMPLATE/Views/Recolte/Index.cshtml
+++ b/TEMPLATE/Views/Recolte/Index.cshtml
@@ -1,4 +1,5 @@
-﻿@model IEnumerable<TEMPLATE.Models.recolte>
+﻿
+@model IEnumerable<TEMPLATE.Models.recolte>
 @{
     ViewBag.Title = "Index";
     Layout = "~/Views/Layouts/_Default.cshtml";
