--- a/TEMPLATE/Views/Recolte/Edit.cshtml
+++ b/TEMPLATE/Views/Recolte/Edit.cshtml
@@ -1,4 +1,5 @@
-﻿@model TEMPLATE.Models.recolte
+﻿
+@model TEMPLATE.Models.recolte
 @{
     ViewBag.Title = "Index";
     Layout = "~/Views/Layouts/_Default.cshtml";
