--- a/TEMPLATE/Views/RecolteStation/Details.cshtml
+++ b/TEMPLATE/Views/RecolteStation/Details.cshtml
@@ -1,4 +1,5 @@
-﻿@model IEnumerable<TEMPLATE.Models.recoltModel>
+﻿
+@model IEnumerable<TEMPLATE.Models.recoltModel>
 @{
     ViewBag.Title = "IndexAssociation";
     Layout = "~/Views/Layouts/_DefaultStation.cshtml";
