--- a/TEMPLATE/Views/RecolteStation/Indexe.cshtml
+++ b/TEMPLATE/Views/RecolteStation/Indexe.cshtml
@@ -1,4 +1,6 @@
-﻿@model IEnumerable<TEMPLATE.Models.recoltModel>
+﻿
+
+@model IEnumerable<TEMPLATE.Models.recoltModel>
 @{
     ViewBag.Title = "IndexAssociation";
     Layout = "~/Views/Layouts/_DefaultStation.cshtml";
