--- a/TEMPLATE/Views/StationLavage/Index.cshtml
+++ b/TEMPLATE/Views/StationLavage/Index.cshtml
@@ -1,4 +1,5 @@
-﻿@model IEnumerable<TEMPLATE.Models.station_lavage>
+﻿
+@model IEnumerable<TEMPLATE.Models.station_lavage>
 @{
     ViewBag.Title = "Index";
     Layout = "~/Views/Layouts/_Default.cshtml";
