--- a/TEMPLATE/Views/StationLavage/Edit.cshtml
+++ b/TEMPLATE/Views/StationLavage/Edit.cshtml
@@ -1,4 +1,5 @@
-﻿@model TEMPLATE.Models.station_lavage
+﻿
+@model TEMPLATE.Models.station_lavage
 @{
     ViewBag.Title = "Index";
     Layout = "~/Views/Layouts/_Default.cshtml";
