SUppression  d'un image

--- a/TEMPLATE/Views/Partials/_Header.cshtml
+++ b/TEMPLATE/Views/Partials/_Header.cshtml
@@ -1,40 +1,49 @@
 ﻿@{
     ViewBag.Title = "_Header";
 }
-<!DOCTYPE html>
-<html lang="en">
+
+<!-- Mirrored from demo.themekita.com/atlantis/livepreview/examples/demo1/ by HTTrack Website Copier/3.x [XR&CO'2014], Sat, 24 Jul 2021 21:35:14 GMT -->
 <head>
 	<meta http-equiv="X-UA-Compatible" content="IE=edge" />
 	<title>Recoltes</title>
 	<meta content='width=device-width, initial-scale=1.0, shrink-to-fit=no' name='viewport' />
 	<link rel="icon" href="~/Assets/img/cafe.jpg" type="image/x-icon"/>
 	<!-- Fonts and icons -->
-	@Scripts.Render("~/Assets/js/plugin/webfont")
+	@*<script src="<?= base_url()?>assets/js/plugin/webfont/webfont.min.js"></script>*@
+    @Scripts.Render("~/Assets/js/plugin/webfont")
 	<script>
-	    WebFont.load({
-	        google: { "families": ["Lato:300,400,700,900"] },
-	        custom: { "families": ["Flaticon", "Font Awesome 5 Solid", "Font Awesome 5 Regular", "Font Awesome 5 Brands", "simple-line-icons"], urls: ['<?= base_url()?>/assets/css/fonts.min.css'] },
-	        active: function () {
-	            sessionStorage.fonts = true;
-	        }
-	    });
+		WebFont.load({
+			google: {"families":["Lato:300,400,700,900"]},
+			custom: {"families":["Flaticon", "Font Awesome 5 Solid", "Font Awesome 5 Regular", "Font Awesome 5 Brands", "simple-line-icons"], urls: ['<?= base_url()?>/assets/css/fonts.min.css']},
+			active: function() {
+				sessionStorage.fonts = true;
+			}
+		});
 	</script>
-    <script src='https://kit.fontawesome.com/a076d05399.js' crossorigin='anonymous'></script>
-@Styles.Render("~/Assets/css")
-	@*<link rel="stylesheet" type="text/css" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.3/css/all.min.css">*@
+
+	<!-- CSS Files -->
+	@*<link rel="stylesheet" href="<?= base_url()?>assets/css/bootstrap.min.css">
+	<link rel="stylesheet" href="<?= base_url()?>assets/css/atlantis.css">*@
+    @Styles.Render("~/Assets/css")
+	<!-- CSS Just for demo purpose, don't include it in your project -->
+	@*<link rel="stylesheet" href="<?= base_url()?>assets/css/demo.css">*@
+	<link rel="stylesheet" type="text/css" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.3/css/all.min.css">
 </head>
-<body>
-<div class="wrapper">
+
+@*<div class="wrapper">*@
 <div class="main-header">
 	<!-- Logo Header -->
 	<div class="logo-header" data-background-color="blue">
+		
+		<a href="index-2.html" class="logo">
+			<img src="Assets/img/logo.svg" alt="navbar brand" class="navbar-brand">
+		</a>
 		<button class="navbar-toggler sidenav-toggler ml-auto" type="button" data-toggle="collapse" data-target="collapse" aria-expanded="false" aria-label="Toggle navigation">
 			<span class="navbar-toggler-icon">
 				<i class="icon-menu"></i>
 			</span>
 		</button>
-		<button class="topbar-toggler more"><i class="icon-options-vertical"></i>
-		</button>
+		<button class="topbar-toggler more"><i class="icon-options-vertical"></i></button>
 		<div class="nav-toggle">
 			<button class="btn btn-toggle toggle-sidebar">
 				<i class="icon-menu"></i>
@@ -42,7 +51,7 @@
 		</div>
 	</div>
 	<!-- End Logo Header -->
-
+  
 	<!-- Navbar Header -->
 	<nav class="navbar navbar-header navbar-expand-lg" data-background-color="blue2">
 		
@@ -69,7 +78,7 @@
 								<div class="notif-center">
 									<a href="#">
 										<div class="notif-img"> 
-											<img src="<?= base_url()?>assets/img/jm_denis.jpg" alt="Img Profile">
+											<img src="Assets/img/jm_denis.jpg" alt="Img Profile">
 										</div>
 										<div class="notif-content">
 											<span class="subject">Jimmy Denis</span>
@@ -93,7 +102,7 @@
 									</a>
 									<a href="#">
 										<div class="notif-img"> 
-											<img src="<?= base_url()?>assets/img/mlane.jpg" alt="Img Profile">
+											<img src="Assets/img/mlane.jpg" alt="Img Profile">
 										</div>
 										<div class="notif-content">
 											<span class="subject">Jhon Doe</span>
@@ -105,7 +114,7 @@
 									</a>
 									<a href="#">
 										<div class="notif-img"> 
-											<img src="<?= base_url()?>assets/img/talha.jpg" alt="Img Profile">
+											<img src="Assets/img/talha.jpg" alt="Img Profile">
 										</div>
 										<div class="notif-content">
 											<span class="subject">Talha</span>
@@ -154,9 +163,9 @@
 										</div>
 									</a>
 									<a href="#">
-										<div class="notif-img"> 
+										@*<div class="notif-img"> 
 											<img src="<?= base_url()?>assets/img/profile2.jpg" alt="Img Profile">
-										</div>
+										</div>*@
 										<div class="notif-content">
 											<span class="block">
 												Reza send messages to you
@@ -251,32 +260,32 @@
 						<i class="fa fa-th"></i>
 					</a>
 				</li>
-				<?php 
+				@*<?php 
 					$memb=$this->Model->readOne('membre', ['ID_MEMBRE'=> $this->session->userdata('memberid')]);
 
-				?>
+				?>*@
 				<li class="nav-item dropdown hidden-caret">
 					<a class="dropdown-toggle profile-pic" data-toggle="dropdown" href="#" aria-expanded="false">
-						<div class="avatar-sm">
+						@*<div class="avatar-sm">
 							<img src="<?= base_url('assets/photo/Profile/').$memb['IMAGE'];?>" alt="..." class="avatar-img rounded-circle">
-						</div>
+						</div>*@
 					</a>
 					<ul class="dropdown-menu dropdown-user animated fadeIn">
 						<div class="dropdown-user-scroll scrollbar-outer">
 							<li>
 								<div class="user-box">
 									<div class="avatar-lg"><img src="<?= base_url('assets/photo/Profile/').$memb['IMAGE'];?>" alt="image profile" class="avatar-img rounded"></div>
-									<div class="u-text">
+									@*<div class="u-text">
 										<h4><?= $this->session->userdata('prenom') ?></h4>
 										<p class="text-muted"><?= $this->session->userdata('username') ?></p><a href="<?= base_url('membre/Membre/Profile')?>" class="btn btn-xs btn-secondary btn-sm">View Profile</a>
-									</div>
+									</div>*@
 								</div>
 							</li>
 							<li>
 								<div class="dropdown-divider"></div>
-								<a class="dropdown-item" href="<?= base_url('membre/Membre/Profile')?>">My Profile</a>
+								<a class="dropdown-item" @*href="<?= base_url('membre/Membre/Profile')?>*@">My Profile</a>
 								<div class="dropdown-divider"></div>
-								<a class="dropdown-item" href="<?= base_url('Login/do_logout')?>">Logout</a>
+								<a class="dropdown-item" @*href="<?= base_url('Login/do_logout')?>*@">Logout</a>
 							</li>
 						</div>
 					</ul>
@@ -285,13 +294,9 @@
 		</div>
 	</nav>
 	<!-- End Navbar -->
-</div>
-
-
-
-
-
-
+ </div>   
+@*</div>
+*@
 
 
 
