--- a/TEMPLATE/Views/RecolteStation/RapportQualite.cshtml
+++ b/TEMPLATE/Views/RecolteStation/RapportQualite.cshtml
@@ -1,5 +1,5 @@
 ﻿
-
+@model IEnumerable<TEMPLATE.Models.recoltModel>
 @{
     ViewBag.Title = "Index";
     Layout = "~/Views/Layouts/_DefaultStation.cshtml";
@@ -38,6 +38,34 @@
 </div>
 <div class="card-body rec-pat" >
   <div class="container-fluid">
+       <div class="table-responsive">
+        <table class="table table-striped  table-bordered  " id="mytable1"  style="width:100%">
+           <thead>
+               <tr style="background-color:darkturquoise">
+                    <th>NO</th>
+                    <th>QUALITE</th>
+                    <th>QUANTITE</th>
+              </tr>
+           </thead>
+            <tbody>
+                @{ int NO = 0;}
+                @foreach (var item in Model) 
+                {
+                   NO = NO + 1;
+                   <tr>
+                <td>
+                    @NO 
+                </td>
+                <td>
+                    @Html.DisplayFor(modelItem => item.name)
+                </td>
+                <td>
+                    @Html.DisplayFor(modelItem => item.count)
+            </tr>
+                }
+            </tbody>
+        </table>
+    </div>
     <div class="row">
        <div class="col-md-12" id="containerQualite"></div>
     </div>
@@ -47,4 +75,7 @@
     @section scripts
     {
     <script src="~/Scripts/stationQualite.js"></script>
+    <script src="~/Scripts/tableau.js"></script>
+    <script src="~/Scripts/tableau1.js"></script>
+
 }
