--- a/TEMPLATE/Views/HistoriquePrix/Create.cshtml
+++ b/TEMPLATE/Views/HistoriquePrix/Create.cshtml
@@ -55,13 +55,17 @@
                                 @Html.ValidationMessageFor(model => model.PRIX)
                             </div>
                          </div>
+                        
+                        @{
+                    var date = @DateTime.Now.ToString("dd-MM-yyyy HH:mm:ss");
+                       }
                         <div class="form-group">
-                            <div class="col-md-12">
-                                <label> Date :</label>
-                                @Html.TextBoxFor(model => model.DATE_insertion, new { @class = "form-control" })
-                                @Html.ValidationMessageFor(model => model.DATE_insertion)
-                            </div>
-                         </div>
+                          <div class="col-md-12">
+                            <label><b style="font-size:20px">Date:</b></label>
+                            <input type="text" readonly="" value="@date" class="form-control total" />
+                            <input type="hidden" name="DATE_insertion" value="@date" class="form-control total" />
+                          </div>
+                       </div>
                         <div class="form-group">
                             <div class="col-md-offset-4 col-md-10">
                                 <input type="submit" value="Enregistre" class="btn btn-success pull-right" />
