--- a/TEMPLATE/Views/RecolteStation/Create.cshtml
+++ b/TEMPLATE/Views/RecolteStation/Create.cshtml
@@ -44,9 +44,15 @@
                   <div class="form-horizontal  "   >
                         <h4 style="text-align:center ;color:blue">Ajouter une nouvelle recolte</h4>
                         <hr />
-                       <p><h1>Prix actuelle de la serise A:<i style="color:blue">@ViewBag.prixSerieA FBU </i> </h1></p>
-                        <p><h1>Prix actuelle de la serise B:<i style="color:blue">@ViewBag.prixSerieB FBU </i> </h1></p>
-                        @Html.ValidationSummary(true, "", new { @class = "text-danger" })
+                      @Html.ValidationSummary(true, "", new { @class = "text-danger" })
+                       <div class="form-group">
+                          <div class="col-md-12">
+                            <label><b style="font-size:20px">Station:</b></label>
+                            <input type="text" readonly="" value="@Session["associat"]" class="form-control total" />
+                            <input type="hidden" name="ID_station" value="@Session["associatID"]" class="form-control total" />
+                          </div>
+                       </div>
+                       
                       <div class="form-group">
                             <div class="col-md-12">
                             <label><b style="font-size:20px">Assciation:</b></label>
@@ -68,14 +74,6 @@
                            </div>
                         </div>
                       <div class="form-group">
-                          <div class="col-md-12">
-                            <label><b style="font-size:20px">Station:</b></label>
-                            <input type="text" readonly="" value="@Session["associat"]" class="form-control total" />
-                            <input type="hidden" name="ID_station" value="@Session["associatID"]" class="form-control total" />
-                          </div>
-                       </div>
-                       
-                      <div class="form-group">
                             <div class="col-md-12"  >
                                 <label><b style="font-size:20px">Quantite:</b></label>
                                 @Html.TextBoxFor(model => model.quantite, new { @class = "form-control" })
@@ -92,7 +90,7 @@
 
                      <div class="form-group">
                             <div class="col-md-12"  >
-                                <label>Date</label>
+                                <label><b style="font-size:20px">Date</b></label>
                                 @Html.TextBoxFor(model => model.Date_insertion, new { @class = "form-control" })
                                 @Html.ValidationMessageFor(model => model.Date_insertion)
                             </div>
