--- a/TEMPLATE/Views/RecolteStation/RapportClient.cshtml
+++ b/TEMPLATE/Views/RecolteStation/RapportClient.cshtml
@@ -1,5 +1,4 @@
-﻿
-
+﻿@model IEnumerable<TEMPLATE.Models.recoltModel>
 @{
     ViewBag.Title = "Index";
     Layout = "~/Views/Layouts/_DefaultStation.cshtml";
@@ -35,19 +34,104 @@
 </div>
 </div>
 </div>
-<div class="card-body rec-pat" >
-  <div class="container-fluid">
+
+ 
       <div class="row">
     <div class="col-md-12" id="containerClient"></div>
+           <div class="container-fluid">
+      @if (Session["IDEmploye"] != null)
+      { 
+    
+    <div class="table-responsive">
+        <table class="table table-striped  table-bordered  " id="mytable1"  style="width:100%">
+           <thead>
+               <tr style="background-color:darkturquoise">
+                    <th>NO</th>
+                    <th>NOM</th>
+                    <th>PRENOM</th>
+                    <th>QUANTITE</th>
+              </tr>
+           </thead>
+            <tbody>
+                @{ int NO = 0;}
+                @foreach (var item in Model) 
+                {
+                   NO = NO + 1;
+                   <tr>
+                <td>
+                    @NO 
+                </td>
+                <td>
+                    @Html.DisplayFor(modelItem => item.NOM_client)
+                </td>
+                <td>
+                    @Html.DisplayFor(modelItem => item.PRENOM_client)
+                </td>
+                    <td>
+                    @Html.DisplayFor(modelItem => item.quantite)
+                </td>
+            </tr>
+                }
+            </tbody>
+        </table>
+    </div>
+      }
+     else
+      { 
+      
+    <div class="table-responsive">
+        <table class="table table-striped  table-bordered  " id="mytable1"  style="width:100%">
+           <thead>
+               <tr style="background-color:darkturquoise">
+                    <th>NO</th>
+                    <th>NOM</th>
+                    <th>PRENOM</th>
+                    <th>QUANTITE</th>
+                    <th>QUALITE</th>
+                    <th>PRIX</th>
+                   <th>STATION</th>
+                   <th>OPTIONS</th>
+              </tr>
+           </thead>
+            <tbody>
+                @{ int NO = 0;}
+                @foreach (var item in Model) 
+                {
+                   NO = NO + 1;
+                   <tr>
+                <td>
+                    @NO 
+                </td>
+                <td>
+                    @Html.DisplayFor(modelItem => item.NOM_client)
+                </td>
+                <td>
+                    @Html.DisplayFor(modelItem => item.PRENOM_client)
+                </td>
+                    <td>
+                    @Html.DisplayFor(modelItem => item.quantite)
+                </td>
+                <td>
+                    @Html.DisplayFor(modelItem => item.NOM_station)
+                </td>
+                <td>
+                     @Html.ActionLink("Detail", "Details", new { idclient = item.ID_client,idqualite=item.ID_qualite,idstation=item.ID_station }, new { @class = "btn btn-sm btn-info " })
+                </td>
+            </tr>
+                }
+            </tbody>
+        </table>
+    </div>
+      }
+  </div>
     
 </div>
 
 
    </div>
-</div>
- </div>
-
     @section scripts
     {
     <script src="~/Scripts/stationClient.js"></script>
+        <script src="~/Scripts/tableau.js"></script>
+    <script src="~/Scripts/tableau1.js"></script>
 }
