--- a/TEMPLATE/Views/StationLavage/RapportClient.cshtml
+++ b/TEMPLATE/Views/StationLavage/RapportClient.cshtml
@@ -1,5 +1,4 @@
-﻿
-
+﻿@model IEnumerable<TEMPLATE.Models.recoltModel>
 @{
     ViewBag.Title = "Index";
     Layout = "~/Views/Layouts/_Default.cshtml";
@@ -40,10 +39,39 @@
       <div class="row">
     <div class="col-md-12" id="containerStationClient"></div>
 </div>
+      <div class="table-responsive">
+        <table class="table table-striped  table-bordered  " id="mytable1"  style="width:100%">
+           <thead>
+               <tr style="background-color:darkturquoise">
+                    <th>NO</th>
+                    <th>NOM</th>
+                    <th>MEMBRE</th>
+              </tr>
+           </thead>
+            <tbody>
+                @{ int NO = 0;}
+                @foreach (var item in Model) 
+                {
+                   NO = NO + 1;
+                   <tr>
+                <td>
+                    @NO 
+                </td>
+                <td>
+                    @Html.DisplayFor(modelItem => item.name)
+                </td>
+                <td>
+                    @Html.DisplayFor(modelItem => item.count)
+                </td>
+                   
+            </tr>
+                }
+            </tbody>
+        </table></div>
    </div>
 </div>
  
     @section scripts
     {
-    <script src="~/Scripts/ChartStationClient.js"></script>
+    <script src="~/Scripts/ChartStationCliente.js"></script>
 }
