--- a/TEMPLATE/Views/StationLavage/RapportQuantite.cshtml
+++ b/TEMPLATE/Views/StationLavage/RapportQuantite.cshtml
@@ -1,5 +1,4 @@
-﻿
-
+﻿@model IEnumerable<TEMPLATE.Models.recoltModel>
 @{
     ViewBag.Title = "Index";
     Layout = "~/Views/Layouts/_Default.cshtml";
@@ -41,6 +40,35 @@
     <div class="col-md-12" id="containerStationQuantite"></div>
     
 </div>
+      <div class="table-responsive">
+        <table class="table table-striped  table-bordered  " id="mytable1"  style="width:100%">
+           <thead>
+               <tr style="background-color:darkturquoise">
+                    <th>NO</th>
+                    <th>NOM</th>
+                    <th>QUANTITE</th>
+              </tr>
+           </thead>
+            <tbody>
+                @{ int NO = 0;}
+                @foreach (var item in Model) 
+                {
+                   NO = NO + 1;
+                   <tr>
+                <td>
+                    @NO 
+                </td>
+                <td>
+                    @Html.DisplayFor(modelItem => item.name)
+                </td>
+                <td>
+                    @Html.DisplayFor(modelItem => item.count)
+                </td>
+                   
+            </tr>
+                }
+            </tbody>
+        </table></div>
 <div class="modal fade" id="myModal" role="dialog">
   <div class="modal-dialog modal-lg" style ="width:1000px;">
         <!-- Modal -->
@@ -76,9 +104,10 @@
 
    </div>
 </div>
- 
-    @section scripts
-    {
-    <script src="~/Scripts/ChartStationQuantite.js"></script>
+@section scripts
+{
+    <script src="~/Scripts/ChartStationQuantit.js"></script>
+    <script src="~/Scripts/tableau.js"></script>
+    <script src="~/Scripts/tableau1.js"></script>
 }
 
