ajouter un  li dans un header

--- a/TEMPLATE/Views/Partials/_Header.cshtml
+++ b/TEMPLATE/Views/Partials/_Header.cshtml
@@ -5,7 +5,7 @@
 <!-- Mirrored from demo.themekita.com/atlantis/livepreview/examples/demo1/ by HTTrack Website Copier/3.x [XR&CO'2014], Sat, 24 Jul 2021 21:35:14 GMT -->
 <head>
 	<meta http-equiv="X-UA-Compatible" content="IE=edge" />
-	<title>Recoltes</title>
+	<title>Recoltes|Cafés</title>
 	<meta content='width=device-width, initial-scale=1.0, shrink-to-fit=no' name='viewport' />
 	<link rel="icon" href="~/Assets/img/cafe.jpg" type="image/x-icon"/>
 	<!-- Fonts and icons -->
