--- a/TEMPLATE/Views/Recolte/Create.cshtml
+++ b/TEMPLATE/Views/Recolte/Create.cshtml
@@ -56,11 +56,14 @@
                             @Html.ValidationMessageFor(model => model.ID_qualite, "", new { @class = "text-danger" })
                            </div>
                         </div>
+                       
+
                       <div class="form-group">
-                            <label>Unit Price
-                            </label>
+                          <div class="col-md-12">
+                            <label>Prix:</label>
                             <input type="text" name="unit_price" class="form-control unit-price"/>
-                        </div>
+                           </div>
+                       </div>
                       <div class="form-group">
                             <div class="col-md-12"  >
                                 <label>Prix</label>
