--- a/TEMPLATE/Views/Association/Index.cshtml
+++ b/TEMPLATE/Views/Association/Index.cshtml
@@ -1,4 +1,4 @@
-﻿@model IEnumerable<TEMPLATE.Models.association>
+﻿@model IEnumerable<TEMPLATE.Models.recoltModel>
 @{
     ViewBag.Title = "Index";
     Layout = "~/Views/Layouts/_Default.cshtml";
@@ -36,7 +36,7 @@
 </div>
  <div class="card-body rec-pat"> 
         @{
-            IEnumerable<TEMPLATE.Models.association> associations = ViewData["association"] as IEnumerable<TEMPLATE.Models.association>;
+            IEnumerable<TEMPLATE.Models.recoltModel> associations = ViewData["association"] as IEnumerable<TEMPLATE.Models.recoltModel>;
             IEnumerable<TEMPLATE.Models.historique_asscociation> historiques = ViewData["historique"] as IEnumerable<TEMPLATE.Models.historique_asscociation>;
         }
         @{
@@ -48,21 +48,27 @@
         }
         <div class="container-fluid">
              <H1 style="color:blue">AFFICHER PAR:</H1>
-              <div class="container-fluid " >
-                  <div class="row">
-                      <article  class="col-xs-12 col-sm-12 col-md-6 col-lg-6">
-                          <h2 style="color:blue">Provinces</h2>
-                            @Html.DropDownList("ID_provinc", null, "Choisir la province", htmlAttributes: new { @class = "form-control " })      
-                      </article>
-                      <article  class="col-xs-12 col-sm-12 col-md-6 col-lg-6"> 
-                          <h2 style="color:blue">Communes </h2>
-                            @Html.DropDownList("ID_commun", null, "Choisir la province", htmlAttributes: new { @class = "form-control " })     
-                      </article>        
-                  </div>         
+              <div class="container-fluid " >  
+                   @using (Html.BeginForm("Index", "Association", FormMethod.Post))
+                   {
+                      <div class="row">
+                            <article  class="col-xs-12 col-sm-12 col-md-6 col-lg-4">
+                                <h2 style="color:blue">Provinces</h2>
+                                @Html.DropDownList("ID_provinc", null, "Choisir la province", htmlAttributes: new { @class = "form-control " })      
+                            </article>
+                            <article  class="col-xs-12 col-sm-12 col-md-6 col-lg-4"> 
+                                <h2 style="color:blue">Communes </h2>
+                                @Html.DropDownList("ID_commun", null, "Choisir la province", htmlAttributes: new { @class = "form-control " })     
+                            </article>
+                            <article  class="col-xs-12 col-sm-12 col-md-6 col-lg-4">
+                                <h2 style="color:blue">Afficher</h2>
+                                 <input type="submit" name="submit" value="Affiche"  class="btn btn-info"/>  
+                            </article>
+                      </div>  
+                   }
               </div> 
-           <div class="table-responsive" style="margin-top:40px">
-
-            <table class="table table-striped  table-bordered  " id="mytable1"  style="width:100%">
+              <div class="table-responsive" style="margin-top:40px">
+             <table class="table table-striped  table-bordered  " id="mytable1"  style="width:100%">
                 <thead>
                 <tr style="background-color:darkturquoise">
                     <th>NO</th>
@@ -70,12 +76,15 @@
                     <th>TEL</th>
                     <th>DATE DE CREATION</th>
                     <th>COLLINE</th>
+                    <th>ZONE</th>
+                    <th>COMMUNE</th>
+                    <th>PROVINCE</th>
                     <th>ETAT</th>
                 </tr>
                     </thead>
                 @{ int NO=0;}
-                <tbody id="tables">
-                @foreach (TEMPLATE.Models.association item in associations)
+                <tbody >
+                @foreach (TEMPLATE.Models.recoltModel item in associations)
                 {
                         NO=NO+1;
                         if (IDassocition.Contains(item.ID_association) == true)
@@ -85,16 +94,25 @@
                                     @NO
                                 </td>
                                 <td>
-                                    @Html.DisplayFor(modelItem => item.NOM_association)
+                                    @Html.DisplayFor(modelItem => item.assocition)
                                 </td>
                                 <td>
-                                    @Html.DisplayFor(modelItem => item.TEL_association)
+                                    @Html.DisplayFor(modelItem => item.tel)
                                 </td>
                                 <td>
-                                    @Html.DisplayFor(modelItem => item.DATE_association)
+                                    @Html.DisplayFor(modelItem => item.date)
                                 </td>
                                 <td>
-                                    @Html.DisplayFor(modelItem => item.colline.NOM_colline)
+                                    @Html.DisplayFor(modelItem => item.colline)
+                                </td>
+                              <td>
+                                    @Html.DisplayFor(modelItem => item.zone)
+                                </td>
+                              <td>
+                                    @Html.DisplayFor(modelItem => item.commune)
+                                </td>
+                              <td>
+                                    @Html.DisplayFor(modelItem => item.province)
                                 </td>
                                 <td>
                                     Inactifs
@@ -105,27 +123,33 @@
                         }
                         else
                         {
-                            <tr>
+                             <tr>
                                 <td>
                                     @NO
                                 </td>
                                 <td>
-                                    @Html.DisplayFor(modelItem => item.NOM_association)
+                                    @Html.DisplayFor(modelItem => item.assocition)
                                 </td>
                                 <td>
-                                    @Html.DisplayFor(modelItem => item.TEL_association)
+                                    @Html.DisplayFor(modelItem => item.tel)
                                 </td>
                                 <td>
-                                    @Html.DisplayFor(modelItem => item.DATE_association)
+                                    @Html.DisplayFor(modelItem => item.date)
                                 </td>
                                 <td>
-                                    @Html.DisplayFor(modelItem => item.colline.NOM_colline)
+                                    @Html.DisplayFor(modelItem => item.colline)
                                 </td>
-
-
-
+                              <td>
+                                    @Html.DisplayFor(modelItem => item.zone)
+                                </td>
+                              <td>
+                                    @Html.DisplayFor(modelItem => item.commune)
+                                </td>
+                              <td>
+                                    @Html.DisplayFor(modelItem => item.province)
+                                </td>
                                 <td>
-                                    Actifs
+                                    Inactifs
                                 </td>
                                 
                             </tr>
