--- a/TEMPLATE/Views/Association/RapportClient.cshtml
+++ b/TEMPLATE/Views/Association/RapportClient.cshtml
@@ -1,5 +1,4 @@
-﻿
-
+﻿@model IEnumerable<TEMPLATE.Models.recoltModel>
 @{
     ViewBag.Title = "Index";
     Layout = "~/Views/Layouts/_Default.cshtml";
@@ -41,12 +40,42 @@
     <div class="col-md-12" id="containerAssociationClients"></div>
     
 </div>
+      <div class="table-responsive">
+        <table class="table table-striped  table-bordered  " id="mytable1"  style="width:100%">
+           <thead>
+               <tr style="background-color:darkturquoise">
+                    <th>NO</th>
+                    <th>NOM</th>
+                    <th>MEMBRE</th>
+              </tr>
+           </thead>
+            <tbody>
+                @{ int NO = 0;}
+                @foreach (var item in Model) 
+                {
+                   NO = NO + 1;
+                   <tr>
+                <td>
+                    @NO 
+                </td>
+                <td>
+                    @Html.DisplayFor(modelItem => item.name)
+                </td>
+                <td>
+                    @Html.DisplayFor(modelItem => item.count)
+                </td>
+                   
+            </tr>
+                }
+            </tbody>
+        </table></div>
 
  </div>
    </div>
 </div>
- 
-    @section scripts
-    {
+@section scripts
+{
     <script src="~/Scripts/ChartsAssociationClient.js"></script>
+    <script src="~/Scripts/tableau.js"></script>
+    <script src="~/Scripts/tableau1.js"></script>
 }
