--- a/TEMPLATE/Views/StationLavage/RapportQuantite.cshtml
+++ b/TEMPLATE/Views/StationLavage/RapportQuantite.cshtml
@@ -40,13 +40,36 @@
     <div class="col-md-12" id="containerStationQuantite"></div>
     
 </div>
+             
+       <p>
+        
+   @using (Html.BeginForm("RapportQuantite", "StationLavage", FormMethod.Post))
+   {
+    <div class="row">
+        <article  class="col-xs-12 col-sm-12 col-md-6 col-lg-4">
+            <h2 style="color:blue">Date de début</h2>
+            <input type="datetime-local" name="startDate"  id="startDate" class="form-control total" />
+            </article>
+                           
+        <article  class="col-xs-12 col-sm-12 col-md-6 col-lg-4">
+            <h2 style="color:blue">Date de fin</h2>
+            <input type="datetime-local" name="endDate" id="endDate"  class="form-control total" /></article>
+        <article  class="col-xs-12 col-sm-12 col-md-6 col-lg-4">
+            <h2 style="color:blue">Voir</h2>
+                <input type="submit" name="submit" id="btnCreatePieChart" value="Voir"  class="btn btn-info"/>  
+        </article>
+    </div> 
+ }  
+</p>
+      <div style="color:blue"><h1> @ViewBag.mot</h1></div>
       <div class="table-responsive">
         <table class="table table-striped  table-bordered  " id="mytable1"  style="width:100%">
            <thead>
                <tr style="background-color:darkturquoise">
                     <th>NO</th>
                     <th>NOM</th>
-                    <th>QUANTITE</th>
+                    <th>QUANTITE(Kg)</th>
+                   <th>OPTIONS</th>
               </tr>
            </thead>
             <tbody>
@@ -64,6 +87,10 @@
                 <td>
                     @Html.DisplayFor(modelItem => item.count)
                 </td>
+                 <td>
+                     @Html.ActionLink("Detail", "Details1", new { id = item.ID }, new { @class = "btn btn-sm btn-info" })
+                </td>
+                   
                    
             </tr>
                 }
@@ -78,7 +105,7 @@
           </div>
       <div class="modal-body">
         <div class="table-responsive">
-          <table id='mytable' class='table table-bordered table-striped table-hover table-condensed'>        
+          <table id='mytable1' class='table table-bordered table-striped table-hover table-condensed'>        
               <thead>
                     <tr>
                       <th>#</th>
