--- a/TEMPLATE/Views/RecolteStation/RapportQualite.cshtml
+++ b/TEMPLATE/Views/RecolteStation/RapportQualite.cshtml
@@ -13,7 +13,7 @@
               
              <div>
               <h2 class="text-white pb-2 fw-bold">
-                ENREGISTREMENT DES RECOLTES DANS @Session["association"]
+                @Session["association"]
             </h2>
         </div>
         <div class="ml-md-auto py-2 py-md-0">
