--- a/TEMPLATE/Views/Recolte/Edit.cshtml
+++ b/TEMPLATE/Views/Recolte/Edit.cshtml
@@ -5,116 +5,107 @@
     Layout = "~/Views/Layouts/_Default.cshtml";
 }
 <div class="main-panel">
-			<div class="container">
-         	<div class="panel-header bg-primary-gradient">
-					<div class="page-inner py-5">
-						<div class="d-flex align-items-left align-items-md-center flex-column flex-md-row">
-							<div>
-							   <h2 class="text-white pb-2 fw-bold">
-								Historique_Emprunt
-							   </h2>
-							</div>
-							<div class="ml-md-auto py-2 py-md-0">
-							<!-- PAGE-HEADER -->
-							<div class="page-header">
-								<ol class="breadcrumb">
-									<li class="breadcrumb-item">
-										<a href="#">Home</a>
-									</li>
-									<li class="breadcrumb-item active" aria-current="page">
-										Modification
-									</li>
-								</ol>
-							</div>
-                            <!-- PAGE-HEADER END -->
-							</div>
-						</div>
-					</div>
-				</div>
-
-
-                    <div class="container_fluid">
-                    	<div class="row">
-                    		<article class="col-xs-12 col-sm-12 col-md-3 col-lg-3">
-                    			
-                    		</article>
-                    		<article class="col-xs-12 col-sm-12 col-md-6 col-lg-6">
-                                @using (Html.BeginForm()) {
-    @Html.ValidationSummary(true)
-
-    <fieldset>
-        <legend>recolte</legend>
-
-        <div class="editor-label">
-            @Html.LabelFor(model => model.ID_recolte)
-        </div>
-        <div class="editor-field">
-            @Html.EditorFor(model => model.ID_recolte)
-            @Html.ValidationMessageFor(model => model.ID_recolte)
-        </div>
-
-        <div class="editor-label">
-            @Html.LabelFor(model => model.ID_client, "client")
-        </div>
-        <div class="editor-field">
-            @Html.DropDownList("ID_client", String.Empty)
-            @Html.ValidationMessageFor(model => model.ID_client)
-        </div>
-
-        <div class="editor-label">
-            @Html.LabelFor(model => model.ID_qualite, "qualite")
-        </div>
-        <div class="editor-field">
-            @Html.DropDownList("ID_qualite", String.Empty)
-            @Html.ValidationMessageFor(model => model.ID_qualite)
-        </div>
-
-        <div class="editor-label">
-            @Html.LabelFor(model => model.ID_station, "station_lavage")
-        </div>
-        <div class="editor-field">
-            @Html.DropDownList("ID_station", String.Empty)
-            @Html.ValidationMessageFor(model => model.ID_station)
-        </div>
-
-        <div class="editor-label">
-            @Html.LabelFor(model => model.quantite)
-        </div>
-        <div class="editor-field">
-            @Html.EditorFor(model => model.quantite)
-            @Html.ValidationMessageFor(model => model.quantite)
-        </div>
-
-        <div class="editor-label">
-            @Html.LabelFor(model => model.Prix)
-        </div>
-        <div class="editor-field">
-            @Html.EditorFor(model => model.Prix)
-            @Html.ValidationMessageFor(model => model.Prix)
-        </div>
-
-        <div class="editor-label">
-            @Html.LabelFor(model => model.Date_insertion)
-        </div>
-        <div class="editor-field">
-            @Html.EditorFor(model => model.Date_insertion)
-            @Html.ValidationMessageFor(model => model.Date_insertion)
-        </div>
-
-        <p>
-            <input type="submit" value="Save" />
-        </p>
-    </fieldset>
+    <div class="container">
+    <div class="panel-header bg-primary-gradient">
+	    <div class="page-inner py-5">
+		    <div class="d-flex align-items-left align-items-md-center flex-column flex-md-row">
+			    <div>
+				    <h2 class="text-white pb-2 fw-bold">Recolte</h2>
+			    </div>
+			    <div class="ml-md-auto py-2 py-md-0">
+			    <!-- PAGE-HEADER -->
+			    <div class="page-header">
+				    <ol class="breadcrumb">
+					    <li class="breadcrumb-item">
+						    <a href="#">Recolte</a>
+					    </li>
+					    <li class="breadcrumb-item active" aria-current="page">
+						    Ajouter
+					    </li>
+				    </ol>
+			    </div>
+                <!-- PAGE-HEADER END -->
+			    </div>
+		    </div>
+	    </div>
+    </div>
+    <div class="container-fluid" style="background-color:moccasin">
+        <div class="row">
+            <article class="col-xs-12 col-sm-12 col-md-3 col-lg-3">     
+            </article>
+            <article class="col-xs-12 col-sm-12 col-md-6 col-lg-6" style="background-color:#D291BC;margin-top:4px;margin-bottom:4px">
+              @using (Html.BeginForm()) 
+              {
+                
+                <div class="bg-light border  margin-top">
+                  <div class="form-horizontal  "   >
+                        <h4 style="text-align:center ;color:blue">Ajouter une nouvelle recolte</h4>
+                        <hr />
+                        @Html.ValidationSummary(true, "", new { @class = "text-danger" })
+                       
+                      <div class="editor-field">
+                            @Html.HiddenFor(model => model.ID_recolte)
+                            @Html.ValidationMessageFor(model => model.ID_recolte)
+                        </div>
+                      <div class="form-group">
+                         <div class="col-md-12">
+                            <label><b style="font-size:20px"> Clients:</b></label>
+                            @Html.DropDownList("ID_client", null, "Choisir le Client", htmlAttributes: new { @class = "form-control " })
+                            @Html.ValidationMessageFor(model => model.ID_client, "", new { @class = "text-danger" })
+                           </div>
+                        </div>
+                      
+                      <div class="form-group">
+                         <div class="col-md-12">
+                            <label><b style="font-size:20px"> Station:</b></label>
+                            @Html.DropDownList("ID_station", null, "Choisir la station", htmlAttributes: new { @class = "form-control " })
+                            @Html.ValidationMessageFor(model => model.ID_station, "", new { @class = "text-danger" })
+                           </div>
+                        </div>
+                      
+                       <div class="form-group">
+                         <div class="col-md-12">
+                            <label><b style="font-size:20px"> Qualite:</b></label>
+                            @Html.DropDownList("ID_qualite", null, "Choisir la qualite", htmlAttributes: new { @class = "form-control " })
+                            @Html.ValidationMessageFor(model => model.ID_qualite, "", new { @class = "text-danger" })
+                           </div>
+                        </div>
+                      <div class="form-group">
+                            <div class="col-md-12"  >
+                                <label><b style="font-size:20px">Prix:</b></label>
+                                @Html.TextBoxFor(model => model.Prix, new { @class = "form-control" })
+                                @Html.ValidationMessageFor(model => model.Prix)
+                            </div>
+                        </div>
+                      <div class="form-group">
+                            <div class="col-md-12"  >
+                                <label><b style="font-size:20px">Quantite:</b></label>
+                                @Html.TextBoxFor(model => model.quantite, new { @class = "form-control" })
+                                @Html.ValidationMessageFor(model => model.quantite)
+                            </div>
+                        </div>
+                       <div class="form-group">
+                            <div class="col-md-12"  >
+                                <label><b style="font-size:20px">Date:</b></label>
+                                @Html.TextBoxFor(model => model.Date_insertion, new { @class = "form-control" })
+                                @Html.ValidationMessageFor(model => model.Date_insertion)
+                            </div>
+                        </div>
+                    
+                       <div class="form-group">
+                            <div class="col-md-offset-4 col-md-10">
+                                <input type="submit" value="Modifier" class="btn btn-success pull-right" />
+                            </div>
+                        </div>
+                    </div>
+                 </div>
+                    <div>
+                        @Html.ActionLink("Retour", "Index")
+                    </div>
 }
-
-        <div>
-            @Html.ActionLink("Back to List", "Index")
-        </div>
-    </article>
-    <article class="col-xs-12 col-sm-12 col-md-3 col-lg-3">
-                    			
-    </article>
-                    		
+</article>
+<article class="col-xs-12 col-sm-12 col-md-3 col-lg-3">    
+</article>
 </div>
-                    	
+</div>
 </div>
