ajout un input de type datetime

--- a/TEMPLATE/Views/HistoriqueUtilisateur/Create.cshtml
+++ b/TEMPLATE/Views/HistoriqueUtilisateur/Create.cshtml
@@ -1,90 +1,96 @@
 ﻿
-
 @model TEMPLATE.Models.historique_utilisateur
 @{
     ViewBag.Title = "Index";
     Layout = "~/Views/Layouts/_Default.cshtml";
 }
 <div class="main-panel">
-			<div class="container">
-         	<div class="panel-header bg-primary-gradient">
-					<div class="page-inner py-5">
-						<div class="d-flex align-items-left align-items-md-center flex-column flex-md-row">
-							<div>
-							   <h2 class="text-white pb-2 fw-bold">
-								Historique_Emprunt
-							   </h2>
-							</div>
-							<div class="ml-md-auto py-2 py-md-0">
-							<!-- PAGE-HEADER -->
-							<div class="page-header">
-								<ol class="breadcrumb">
-									<li class="breadcrumb-item">
-										<a href="#">Home</a>
-									</li>
-									<li class="breadcrumb-item active" aria-current="page">
-										Modification
-									</li>
-								</ol>
-							</div>
-                            <!-- PAGE-HEADER END -->
-							</div>
-						</div>
-					</div>
-				</div>
-
-
-                    <div class="container_fluid">
-                    	<div class="row">
-                    		<article class="col-xs-12 col-sm-12 col-md-3 col-lg-3">
-                    			
-                    		</article>
-                    		<article class="col-xs-12 col-sm-12 col-md-6 col-lg-6">
-@using (Html.BeginForm()) {
-    @Html.ValidationSummary(true)
-
-    <fieldset>
-        <legend>historique_utilisateur</legend>
-
-        <div class="editor-label">
-            @Html.LabelFor(model => model.ID_histoUtilisateur)
-        </div>
-        <div class="editor-field">
-            @Html.EditorFor(model => model.ID_histoUtilisateur)
-            @Html.ValidationMessageFor(model => model.ID_histoUtilisateur)
-        </div>
-
-        <div class="editor-label">
-            @Html.LabelFor(model => model.ID_utilisateur, "utilisateur")
-        </div>
-        <div class="editor-field">
-            @Html.DropDownList("ID_utilisateur", String.Empty)
-            @Html.ValidationMessageFor(model => model.ID_utilisateur)
-        </div>
-
-        <div class="editor-label">
-            @Html.LabelFor(model => model.DATE_desactive)
-        </div>
-        <div class="editor-field">
-            @Html.EditorFor(model => model.DATE_desactive)
-            @Html.ValidationMessageFor(model => model.DATE_desactive)
-        </div>
-
-     <p>
-            <input type="submit" value="Create" />
-        </p>
-    </fieldset>
-}
-<div>
-    @Html.ActionLink("Back to List", "Index")
-</div>
-
-                    			
-                    		</article>
-                    		<article class="col-xs-12 col-sm-12 col-md-3 col-lg-3">
-                    			
-                    		</article>
-                    		
-                    	</div>
-                    	
+    <div class="container">
+    <div class="panel-header bg-primary-gradient">
+	    <div class="page-inner py-5">
+		    <div class="d-flex align-items-left align-items-md-center flex-column flex-md-row">
+			    <div>
+				    <h2 class="text-white pb-2 fw-bold">Les employe des associations et des stations</h2>
+			    </div>
+			    <div class="ml-md-auto py-2 py-md-0">
+			    <!-- PAGE-HEADER -->
+			    <div class="page-header">
+				    <ol class="breadcrumb">
+					    <li class="breadcrumb-item">
+						    <a href="#">Les employes</a>
+					    </li>
+					    <li class="breadcrumb-item active" aria-current="page">
+						    Désactive
+					    </li>
+				    </ol>
+			    </div>
+                <!-- PAGE-HEADER END -->
+			    </div>
+		    </div>
+	    </div>
+    </div>
+    <div class="container-fluid" >
+        <div class="row">
+            <article class="col-xs-12 col-sm-12 col-md-3 col-lg-3">     
+            </article>
+            <article class="col-xs-12 col-sm-12 col-md-6 col-lg-6" style="background-color:#D291BC;margin-top:40px;margin-bottom:4px">
+                @using (Html.BeginForm())
+                {
+                    @Html.AntiForgeryToken()
+                    <div class="bg-light border  margin-top">
+                    <div class="form-horizontal  "   >
+                        <h4 style="text-align:center ;color:blue">Désactive un employe</h4>
+                        <hr />
+                        @Html.ValidationSummary(true, "", new { @class = "text-danger" })
+                        
+                        <div class="form-group">
+                            <label> <b style="font-size:20px">Utilisateur :</b></label>
+                            <div class="col-md-12">
+                                   @Html.DropDownList("ID_utilisateur", null, "Choisir l'utilisateur", htmlAttributes: new { @class = "form-control " })
+                                   @Html.ValidationMessageFor(model => model.ID_utilisateur)
+        
+                            </div>
+                         </div>
+                     
+                        <div class="form-group">
+                          <div class="col-md-12">
+                            <label><b style="font-size:20px">Date :</b></label>
+                            <input type="Datetime-local" name="DATE_desactive" class="form-control total" />
+                            
+                          </div>
+                       </div>
+                        <div class="form-group">
+                            <div class="col-md-offset-4 col-md-10">
+                                <input type="submit" value="Désactive" class="btn btn-danger pull-right" />
+                            </div>
+                        </div>
                     </div>
+                    </div>
+                    <div>
+                        @Html.ActionLink("Retour", "Index")
+                    </div>
+                }
+            </article>
+            <article class="col-xs-12 col-sm-12 col-md-3 col-lg-3">    
+            </article>
+        </div>
+</div>
+    </div>
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
